--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script src="js/classes.js"type="text/javascript"></script>
+    <script src="js/create.js"type="text/javascript"></script>  
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
