--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Global Games Jam 2019</title>
+    <title>A cats way home - GGJ-2019</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        body{
+            background-color: black;
+        }
+        h1{
+          color: white;
+          text-align: center;
+        }
+    </style>
     <script src="js/phaser.js"></script>
 </head>
 <body>
+    <script src="js/other.js"type="text/javascript"></script>
     <script src="js/classes.js"type="text/javascript"></script>
-    <script src="js/create.js"type="text/javascript"></script>  
+    <script src="js/create.js"type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
